--- a/AJ/Views/Shared/_Layout.cshtml
+++ b/AJ/Views/Shared/_Layout.cshtml
@@ -21,11 +21,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="HW" asp-action="Index2">作業2</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HW" asp-action="Index1">作業1</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li> 
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HW" asp-action="Index2">作業2、3</a>
+                        </li>                      
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HW" asp-action="Index4">作業4</a>
+                        </li>
                     </ul>
                 </div>
             </div>
