--- a/AJ/Views/HW/Index2.cshtml
+++ b/AJ/Views/HW/Index2.cshtml
@@ -4,7 +4,6 @@
 <div class="row">
     <div class="col-3"></div>
     <div class="col-6">
-        <h1>Register</h1>
         <form action="~/API/Index4" id="form1">
             <div class="mb-3">
                 <label for="InputName" class="form-label">姓名</label>
@@ -16,13 +15,13 @@
                 <input type="email" class="form-control" id="InputEmail" name="Email">
             </div>
             <div class="mb-3">
-                <label for="InputEmail" class="form-label">密碼</label>
-                <input type="email" class="form-control" id="InputPassword" name="Password" onchange="paw()">
+                <label for="InputPassword" class="form-label">密碼</label>
+                <input type="password" class="form-control" id="InputPassword" name="Password" onchange="paw()">
                 <div id="div3"></div>
             </div>     
             <div class="mb-3">
-                <label for="InputEmail" class="form-label">密碼確認</label>
-                <input type="email" class="form-control" id="InputPassword2" name="Password2" onchange="paw()">
+                <label for="InputPassword2" class="form-label">密碼確認</label>
+                <input type="password" class="form-control" id="InputPassword2" name="Password2" onchange="paw()">
                 <div id="div4"></div>
            </div>         
             <div class="mb-3">
@@ -30,7 +29,7 @@
                 <input type="number" class="form-control" id="InputAge" name="Age">
             </div>
             <div class="mb-3">
-                <label for="formFile" class="form-label">Default file input example</label>
+                <label for="formFile" class="form-label">選擇圖片</label>
                 <input class="form-control" type="file" id="formFile" name="fil">
             </div>
             <button type="button" class="btn btn-primary" id="bu1" onclick="go()">送出</button>
