--- a/AJ/Views/HW/Index4.cshtml
+++ b/AJ/Views/HW/Index4.cshtml
@@ -92,6 +92,7 @@
     }
     function cha1() {
         Data.pageSize = select1.value
+        Data.page = 1
         go()
     }
     function cha2() {
@@ -106,6 +107,7 @@
     }
     function txt2() {
         Data.keyword = tx1.value
+        Data.page = 1
         go()
     }
 </script>
